--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "wbdv-sp21-01-rishabh-dutta-server-node",
   "version": "1.0.0",
   "description": "Node JS Server for React Client",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
